; ModuleID = '/home/carl/AnghaBench/RetroArch/menu/extr_menu_setting.c_start_sub_group.c'
source_filename = "/home/carl/AnghaBench/RetroArch/menu/extr_menu_setting.c_start_sub_group.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i32 }
%struct.TYPE_8__ = type { i8* }

@ST_SUB_GROUP = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32**, %struct.TYPE_7__*, i8*, %struct.TYPE_8__*, %struct.TYPE_8__*, i8*)* @start_sub_group to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @start_sub_group(i32** %0, %struct.TYPE_7__* %1, i8* %2, %struct.TYPE_8__* %3, %struct.TYPE_8__* %4, i8* %5) #0 {
  %7 = alloca i32, align 4
  %8 = alloca i32**, align 8
  %9 = alloca %struct.TYPE_7__*, align 8
  %10 = alloca i8*, align 8
  %11 = alloca %struct.TYPE_8__*, align 8
  %12 = alloca %struct.TYPE_8__*, align 8
  %13 = alloca i8*, align 8
  store i32** %0, i32*** %8, align 8
  store %struct.TYPE_7__* %1, %struct.TYPE_7__** %9, align 8
  store i8* %2, i8** %10, align 8
  store %struct.TYPE_8__* %3, %struct.TYPE_8__** %11, align 8
  store %struct.TYPE_8__* %4, %struct.TYPE_8__** %12, align 8
  store i8* %5, i8** %13, align 8
  %14 = load i8*, i8** %10, align 8
  %15 = load %struct.TYPE_8__*, %struct.TYPE_8__** %12, align 8
  %16 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %15, i32 0, i32 0
  store i8* %14, i8** %16, align 8
  %17 = load i32**, i32*** %8, align 8
  %18 = load %struct.TYPE_7__*, %struct.TYPE_7__** %9, align 8
  %19 = call i32 @settings_list_append(i32** %17, %struct.TYPE_7__* %18)
  %20 = icmp ne i32 %19, 0
  br i1 %20, label %22, label %21

21:                                               ; preds = %6
  store i32 0, i32* %7, align 4
  br label %38

22:                                               ; preds = %6
  %23 = load i32, i32* @ST_SUB_GROUP, align 4
  %24 = load i8*, i8** %10, align 8
  %25 = load %struct.TYPE_8__*, %struct.TYPE_8__** %11, align 8
  %26 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %25, i32 0, i32 0
  %27 = load i8*, i8** %26, align 8
  %28 = load i8*, i8** %13, align 8
  %29 = call i32 @setting_subgroup_setting(i32 %23, i8* %24, i8* %27, i8* %28, i32 0)
  %30 = load i32**, i32*** %8, align 8
  %31 = load i32*, i32** %30, align 8
  %32 = load %struct.TYPE_7__*, %struct.TYPE_7__** %9, align 8
  %33 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %32, i32 0, i32 0
  %34 = load i32, i32* %33, align 4
  %35 = add nsw i32 %34, 1
  store i32 %35, i32* %33, align 4
  %36 = sext i32 %34 to i64
  %37 = getelementptr inbounds i32, i32* %31, i64 %36
  store i32 %29, i32* %37, align 4
  store i32 1, i32* %7, align 4
  br label %38

38:                                               ; preds = %22, %21
  %39 = load i32, i32* %7, align 4
  ret i32 %39
}

declare dso_local i32 @settings_list_append(i32**, %struct.TYPE_7__*) #1

declare dso_local i32 @setting_subgroup_setting(i32, i8*, i8*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
